--- a/package.json
+++ b/package.json
@@ -17,9 +17,15 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
+    "contentful": "^6.1.1",
     "eslint": "^4.15.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
-    "eslint-plugin-vue": "^4.0.0"
+    "eslint-plugin-vue": "^4.0.0",
+    "marked": "^0.4.0",
+    "node-sass": "^4.9.2",
+    "pug": "^2.0.3",
+    "pug-loader": "^2.4.0",
+    "sass-loader": "^7.0.3"
   }
 }
